# WireShark

./: .gitignore  Readme.md  mock-api-server.js  package-lock.json  package.json  setup.sh
WireShark/cpp-packet-analyzer/: CMakeLists.txt  README.md
WireShark/cpp-packet-analyzer/examples/: demo_capture.sh
WireShark/cpp-packet-analyzer/include/analysis/: analyzer.h
WireShark/cpp-packet-analyzer/include/api/: http_server.h
WireShark/cpp-packet-analyzer/include/capture/: pcap_capture.h
WireShark/cpp-packet-analyzer/include/common/: packet.h
WireShark/cpp-packet-analyzer/include/decode/: ethernet.h  ip.h  tcp.h  udp.h
WireShark/cpp-packet-analyzer/include/ui/: tui.h
WireShark/cpp-packet-analyzer/include/utils/: logger.h
WireShark/cpp-packet-analyzer/scripts/: run_capture.sh
WireShark/cpp-packet-analyzer/src/: main.cpp
WireShark/cpp-packet-analyzer/src/analysis/: analyzer.cpp
WireShark/cpp-packet-analyzer/src/api/: http_server.cpp
WireShark/cpp-packet-analyzer/src/capture/: pcap_capture.cpp
WireShark/cpp-packet-analyzer/src/decode/: ethernet.cpp  ip.cpp  tcp.cpp  udp.cpp
WireShark/cpp-packet-analyzer/src/ui/: tui.cpp
WireShark/cpp-packet-analyzer/src/utils/: logger.cpp
WireShark/cpp-packet-analyzer/tests/: CMakeLists.txt  analyzer_tests.cpp
docs/: README.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Dashboard.tsx  Header.tsx  PacketDetails.tsx  PacketList.tsx  PacketStatistics.tsx  Sidebar.tsx
frontend/src/services/: api.ts
